# operator-on-F

./: .gitignore  LICENSE  README.md  pyproject.toml  reproduce.py
figures/: make_cross_architecture.py  make_metric_disagreement.py  make_scissors.py
operator_on_F/: __init__.py  diagnostic.py  stats.py
results/: cross_architecture.json  size_sweep.json
tests/: test_diagnostic.py
