[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "operator-on-F"
version = "0.1.0"
description = "A planning-time diagnostic for latent world models (operator-on-F)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Donna Vakalis" }]
dependencies = ["numpy"]

[project.optional-dependencies]
figures = ["matplotlib"]
dev = ["pytest"]

[tool.setuptools]
packages = ["operator_on_F"]
